Rcl.Compiler/antlr/RaccoonLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/jbaehr/Source/Rcl/Rcl.Compiler\RaccoonLang.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class RaccoonLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, Modifier=70, Identifier=71, BoolLiteral=72, 
		NumberLiteral=73, CharacterLiteral=74, StringLiteral=75, WhiteSpace=76, 
		SingleLineComment=77, MultiLineComment=78;
	public const int
		RULE_compilationUnit = 0, RULE_importStatement = 1, RULE_namespaceImport = 2, 
		RULE_aliasImport = 3, RULE_groupImport = 4, RULE_groupImportItem = 5, 
		RULE_groupImportItemList = 6, RULE_namespace = 7, RULE_typeDeclaration = 8, 
		RULE_functionDeclaration = 9, RULE_parameters = 10, RULE_parameter = 11, 
		RULE_functionBody = 12, RULE_functionBlockBody = 13, RULE_functionLambdaBody = 14, 
		RULE_interfaceDeclaration = 15, RULE_interfaceParents = 16, RULE_interfaceBody = 17, 
		RULE_interfaceMember = 18, RULE_interfaceMethodOrFunction = 19, RULE_interfaceMethodParameters = 20, 
		RULE_interfaceProperty = 21, RULE_interfacePropertyAccessors = 22, RULE_getAndSetAccessors = 23, 
		RULE_getOnlyAccessor = 24, RULE_setOnlyAccessor = 25, RULE_autoAccessors = 26, 
		RULE_classDeclaration = 27, RULE_classParents = 28, RULE_interfaces = 29, 
		RULE_baseClass = 30, RULE_classBody = 31, RULE_classMember = 32, RULE_ctor = 33, 
		RULE_ctorBody = 34, RULE_shortCtorBody = 35, RULE_longCtorBody = 36, RULE_otherCtorCall = 37, 
		RULE_classProperty = 38, RULE_initializer = 39, RULE_classPropertyAccessors = 40, 
		RULE_classPropertyFullAccessors = 41, RULE_fullGetAccessor = 42, RULE_fullSetAccessor = 43, 
		RULE_accessorBody = 44, RULE_classMethodOrFunction = 45, RULE_dataClassDeclaration = 46, 
		RULE_dataClassBody = 47, RULE_fqtn = 48, RULE_fqtnPart = 49, RULE_fqtnGenericPart = 50, 
		RULE_typeName = 51, RULE_genericPart = 52, RULE_statement = 53, RULE_returnStatement = 54, 
		RULE_mutChangeStatement = 55, RULE_variableDeclarationStatement = 56, 
		RULE_variableDeclaration = 57, RULE_loopStatement = 58, RULE_whileLoop = 59, 
		RULE_foreachLoop = 60, RULE_forLoop = 61, RULE_expressionStatement = 62, 
		RULE_expression = 63, RULE_nullCoalescingExpression = 64, RULE_condOrExpression = 65, 
		RULE_condAndExpression = 66, RULE_boolOrExpression = 67, RULE_boolXorExpression = 68, 
		RULE_boolAndExpression = 69, RULE_equalityExpression = 70, RULE_relationalExpression = 71, 
		RULE_shiftExpression = 72, RULE_additiveExpression = 73, RULE_multiplicativeExpression = 74, 
		RULE_rangeExpression = 75, RULE_unaryExpression = 76, RULE_accessorExpression = 77, 
		RULE_indexerExpression = 78, RULE_term = 79, RULE_functionCallExpression = 80, 
		RULE_postExpression = 81, RULE_parExpression = 82, RULE_ifExpression = 83, 
		RULE_elifPart = 84, RULE_elsePart = 85, RULE_newExpression = 86, RULE_literal = 87, 
		RULE_blockExpression = 88, RULE_expressionList = 89, RULE_identifierListComma = 90, 
		RULE_identifierListDot = 91;
	public static readonly string[] ruleNames = {
		"compilationUnit", "importStatement", "namespaceImport", "aliasImport", 
		"groupImport", "groupImportItem", "groupImportItemList", "namespace", 
		"typeDeclaration", "functionDeclaration", "parameters", "parameter", "functionBody", 
		"functionBlockBody", "functionLambdaBody", "interfaceDeclaration", "interfaceParents", 
		"interfaceBody", "interfaceMember", "interfaceMethodOrFunction", "interfaceMethodParameters", 
		"interfaceProperty", "interfacePropertyAccessors", "getAndSetAccessors", 
		"getOnlyAccessor", "setOnlyAccessor", "autoAccessors", "classDeclaration", 
		"classParents", "interfaces", "baseClass", "classBody", "classMember", 
		"ctor", "ctorBody", "shortCtorBody", "longCtorBody", "otherCtorCall", 
		"classProperty", "initializer", "classPropertyAccessors", "classPropertyFullAccessors", 
		"fullGetAccessor", "fullSetAccessor", "accessorBody", "classMethodOrFunction", 
		"dataClassDeclaration", "dataClassBody", "fqtn", "fqtnPart", "fqtnGenericPart", 
		"typeName", "genericPart", "statement", "returnStatement", "mutChangeStatement", 
		"variableDeclarationStatement", "variableDeclaration", "loopStatement", 
		"whileLoop", "foreachLoop", "forLoop", "expressionStatement", "expression", 
		"nullCoalescingExpression", "condOrExpression", "condAndExpression", "boolOrExpression", 
		"boolXorExpression", "boolAndExpression", "equalityExpression", "relationalExpression", 
		"shiftExpression", "additiveExpression", "multiplicativeExpression", "rangeExpression", 
		"unaryExpression", "accessorExpression", "indexerExpression", "term", 
		"functionCallExpression", "postExpression", "parExpression", "ifExpression", 
		"elifPart", "elsePart", "newExpression", "literal", "blockExpression", 
		"expressionList", "identifierListComma", "identifierListDot"
	};

	private static readonly string[] _LiteralNames = {
		null, "'import'", "';'", "'as'", "'{'", "'}'", "','", "'namespace'", "'fn'", 
		"'('", "')'", "'=>'", "'interface'", "'extends'", "'get'", "'set'", "'class'", 
		"'implements'", "'new'", "'this'", "'base'", "'='", "'data'", "'.'", "'?'", 
		"'<'", "'>'", "'return'", "'+='", "'-='", "'*='", "'/='", "'^='", "'|='", 
		"'||='", "'&='", "'&&='", "'??='", "'%='", "'mut'", "'var'", "'loop'", 
		"'in'", "'??'", "'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", "'!='", "'>='", 
		"'<='", "'<<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'..'", "'!'", "'~'", 
		"'++'", "'--'", "'?.'", "'['", "']'", "'if'", "'elif'", "'else'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "Modifier", 
		"Identifier", "BoolLiteral", "NumberLiteral", "CharacterLiteral", "StringLiteral", 
		"WhiteSpace", "SingleLineComment", "MultiLineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RaccoonLang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static RaccoonLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RaccoonLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RaccoonLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CompilationUnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementContext[] importStatement() {
			return GetRuleContexts<ImportStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementContext importStatement(int i) {
			return GetRuleContext<ImportStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceContext @namespace() {
			return GetRuleContext<NamespaceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclarationContext[] typeDeclaration() {
			return GetRuleContexts<TypeDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclarationContext typeDeclaration(int i) {
			return GetRuleContext<TypeDeclarationContext>(i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.EnterCompilationUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.ExitCompilationUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonLangVisitor<TResult> typedVisitor = visitor as IRaccoonLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 187;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 184;
				importStatement();
				}
				}
				State = 189;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 191;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 190;
				@namespace();
				}
			}

			State = 196;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Modifier) {
				{
				{
				State = 193;
				typeDeclaration();
				}
				}
				State = 198;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceImportContext namespaceImport() {
			return GetRuleContext<NamespaceImportContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AliasImportContext aliasImport() {
			return GetRuleContext<AliasImportContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupImportContext groupImport() {
			return GetRuleContext<GroupImportContext>(0);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.EnterImportStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.ExitImportStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonLangVisitor<TResult> typedVisitor = visitor as IRaccoonLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportStatementContext importStatement() {
		ImportStatementContext _localctx = new ImportStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_importStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 199;
			Match(T__0);
			State = 203;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 200;
				namespaceImport();
				}
				break;
			case 2:
				{
				State = 201;
				aliasImport();
				}
				break;
			case 3:
				{
				State = 202;
				groupImport();
				}
				break;
			}
			State = 205;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceImportContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierListDotContext identifierListDot() {
			return GetRuleContext<IdentifierListDotContext>(0);
		}
		public NamespaceImportContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceImport; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.EnterNamespaceImport(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.ExitNamespaceImport(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonLangVisitor<TResult> typedVisitor = visitor as IRaccoonLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceImport(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceImportContext namespaceImport() {
		NamespaceImportContext _localctx = new NamespaceImportContext(Context, State);
		EnterRule(_localctx, 4, RULE_namespaceImport);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 207;
			identifierListDot();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AliasImportContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierListDotContext identifierListDot() {
			return GetRuleContext<IdentifierListDotContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(RaccoonLangParser.Identifier, 0); }
		public AliasImportContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_aliasImport; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.EnterAliasImport(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.ExitAliasImport(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonLangVisitor<TResult> typedVisitor = visitor as IRaccoonLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAliasImport(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AliasImportContext aliasImport() {
		AliasImportContext _localctx = new AliasImportContext(Context, State);
		EnterRule(_localctx, 6, RULE_aliasImport);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 209;
			identifierListDot();
			State = 210;
			Match(T__2);
			State = 211;
			Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GroupImportContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierListDotContext identifierListDot() {
			return GetRuleContext<IdentifierListDotContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupImportItemListContext groupImportItemList() {
			return GetRuleContext<GroupImportItemListContext>(0);
		}
		public GroupImportContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_groupImport; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.EnterGroupImport(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.ExitGroupImport(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonLangVisitor<TResult> typedVisitor = visitor as IRaccoonLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGroupImport(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GroupImportContext groupImport() {
		GroupImportContext _localctx = new GroupImportContext(Context, State);
		EnterRule(_localctx, 8, RULE_groupImport);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 213;
			identifierListDot();
			State = 214;
			Match(T__3);
			State = 215;
			groupImportItemList();
			State = 216;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GroupImportItemContext : ParserRuleContext {
		public IToken name;
		public IToken alias;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(RaccoonLangParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(RaccoonLangParser.Identifier, i);
		}
		public GroupImportItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_groupImportItem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.EnterGroupImportItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonLangListener typedListener = listener as IRaccoonLangListener;
			if (typedListener != null) typedListener.ExitGroupImportItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonLangVisitor<TResult> typedVisitor = visitor as IRaccoonLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGroupImportItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GroupImportItemContext groupImportItem() {
		GroupImportItemContext _localctx = new GroupImportItemContext(Context, State);
		EnterRule(_localctx, 10, RULE_groupImportItem);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 218;
			_localctx.name = Match(Identifier);
			State = 221;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 219;
				Match(T__2);
				State = 220;
				_localctx.alias = Match(Identifier);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
